<resources>
    <string name="app_name">flavourfair</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="heading1">Discover</string>
    <string name="heading2">Apa yang ingin warkops makan?</string>
    <string name="text_burger">Burger</string>
    <string name="text_mie">Mie</string>
    <string name="text_snack">Snack</string>
    <string name="text_minum">Minum</string>
    <string name="heading3">Popular</string>
    <string name="text_ayambakar">Ayam Bakar</string>
    <string name="text_price50">Rp. 50.000</string>
    <string name="text_price40">Rp. 40.000</string>
    <string name="text_price5">Rp. 5.000</string>
    <string name="text_ayamgeprek">Ayam Geprek</string>
    <string name="text_sateususayam">Sate Usus Ayam</string>
    <string name="text_ayamgoreng">Ayam Goreng</string>
    <string name="text_subtitlebanner">Connecting you with the Best Culinary.</string>
    <string name="text_titlebanner">Flavour Dash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_location">Location</string>
    <string name="text_desc_location" href="https://maps.app.goo.gl/h4wQKqaBuXzftGK77">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang Banten 15345</string>
    <string name="btn_addcart">Keranjang</string>
    <string name="btn_order">Pesan Sekarang</string>
    <string name="text_rating">4.7K Review</string>
    <string name="text_cart">Keranjang</string>
    <string name="text_totalprice">Total Harga</string>
    <string name="text_btn_order">Pesan</string>
    <string name="text_profile">Profile</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_shipping_method">Shipping Method</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_total_price">x%s</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="text_login_here">Sudah punya akun? Masuk di sini</string>
    <string name="btn_signup">Sign Up</string>
    <string name="text_privacypolicy">Dengan mendaftar, Anda mengonfirmasi bahwa Anda menerima Ketentuan Penggunaan dan Kebijakan Privasi kami.</string>
    <string name="btn_login">Login</string>
    <string name="text_register">Belum punya akun? Daftar di sini</string>
    <string name="text_highlight_login_here">Login di sini</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong!</string>
    <string name="text_error_email_empty">Email  tidak boleh kosong!</string>
    <string name="text_error_email_invalid">Format email tidak tepat!</string>
    <string name="text_error_password_empty">Password tidak boleh kosong!</string>
    <string name="text_error_password_less_than_8_char">Password kurang dari 8 karakter!</string>
    <string name="text_password_does_not_match">Password tidak sama!</string>
    <string name="text_change_profile">Edit Profile</string>
    <string name="text_change_password">Ganti Password</string>
    <string name="text_logout">Keluar\n</string>
    <string name="text_highlight_register">Daftar di sini</string>
    <string name="text_okay">OK</string>
    <string name="text_cart_is_empty">\"Keranjang kosong\"</string>
    <string name="text_takeaway">Take to the resto</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_cash">Cash</string>
    <string name="text_ewallet">E-Wallet</string>
    <string name="text_payment_summary">Ringkasan Pembayaran</string>
    <string name="push_notification">Push Notification</string>
    <string name="product_not_found">Produk tidak ditemukan</string>
    <string name="all">Semua</string>

</resources>