<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_shipping_method"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_toggle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/switch_outline"
            android:checkedButton="@+id/rb_take"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_shipping">

            <RadioButton
                android:id="@+id/rb_take"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/text_takeaway"
                android:textColor="@drawable/text_toggle" />

            <RadioButton
                android:id="@+id/rb_delivery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/text_delivery"
                android:textColor="@drawable/text_toggle" />
        </RadioGroup>

        <View
            android:id="@+id/v_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="10dp"
            android:background="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/rg_toggle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/cl_switch1"
        tools:itemCount="3"
        tools:listitem="@layout/item_cart_product" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_payment_method"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_toggle2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/switch_outline"
                android:checkedButton="@+id/rb_cash"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_payment">

                <RadioButton
                    android:id="@+id/rb_cash"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/text_cash"
                    android:textColor="@drawable/text_toggle" />

                <RadioButton
                    android:id="@+id/rb_ewallet"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/text_ewallet"
                    android:textColor="@drawable/text_toggle" />
            </RadioGroup>

            <View
                android:id="@+id/v_line3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="@color/primaryColor"
                app:layout_constraintTop_toBottomOf="@id/rg_toggle2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/sv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cl_switch2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/btn_order">

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_payment_summary"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_shopping_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_cost" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>